--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.0.5",
