--- a/package.json
+++ b/package.json
@@ -6,37 +6,49 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tailwind": "tailwindcss --version",
+    "tw:build": "tailwindcss -i ./src/index.css -o ./src/styles.css",
+    "tw:watch": "tailwindcss -i ./src/index.css -o ./src/styles.css --watch"
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@shadcn/ui": "^0.0.4",
-    "@tailwindcss/postcss": "^4.0.5",
-    "@tauri-apps/api": "^1.6.0",
     "@types/recharts": "^1.8.29",
     "active-win": "^8.2.1",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.0.5",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/cli": "^1.6.3",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.5",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-tauri": "^4.0.0"
   }
 }
