--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 active-win-pos-rs = "0.9.0"
 tokio = { version = "1.43.0", features = ["full"] }
-winapi = { version = "0.3.9", features = ["winuser", "winbase"] }
+winapi = { version = "0.3.9", features = ["winuser", "winbase", "processthreadsapi"] }
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
