--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "tw:watch": "tailwindcss -i ./src/index.css -o ./src/styles.css --watch"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@shadcn/ui": "^0.0.4",
+    "@tauri-apps/api": "^1.6.0",
     "@types/recharts": "^1.8.29",
     "active-win": "^8.2.1",
     "chart.js": "^4.4.7",
@@ -23,11 +26,13 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
@@ -36,13 +41,13 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.0.5",
     "@tailwindcss/typography": "^0.5.16",
-    "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/cli": "^1.6.3",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "path": "^0.12.7",
     "postcss": "^8.5.1",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
