--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ serde_json = "1"
 active-win-pos-rs = "0.9.0"
 tokio = { version = "1.43.0", features = ["full"] }
 winapi = { version = "0.3.9", features = ["winuser", "winbase", "processthreadsapi", "psapi", "minwindef", "winnt", "handleapi", "winerror"] }
-
+uuid = { version = "1.4", features = ["v4", "serde"] }
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
