--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,12 +12,17 @@ tauri-build = { version = "1", features = [] }
 
 [dependencies]
 tauri = { version = "1", features = [ "window-close", "window-maximize", "window-start-dragging", "window-minimize", "shell-open"] }
-serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 active-win-pos-rs = "0.9.0"
 tokio = { version = "1.43.0", features = ["full"] }
 winapi = { version = "0.3.9", features = ["winuser", "winbase", "processthreadsapi", "psapi", "minwindef", "winnt", "handleapi", "winerror"] }
 uuid = { version = "1.4", features = ["v4", "serde"] }
+serde = { version = "1.0", features = ["derive"] }
+chrono = "0.4.34"
+sysinfo = "0.30.5"
+once_cell = "1.19.0"
+md5 = "0.7.0"
+
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
